@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-10T08:17:17Z",
-  "count_outdated" : 6599,
-  "uniques_outdated" : 2567,
+  "timestamp" : "2024-02-10T16:19:05Z",
+  "count_outdated" : 6601,
+  "uniques_outdated" : 2568,
   "count" : 6803,
   "uniques" : 2718,
   "clones" : [
-    {
-      "timestamp": "2024-01-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-28T00:00:00Z",
       "count": 3,
