@@ -1,12 +1,7 @@
 {
-  "count": 203,
+  "count": 202,
   "uniques": 114,
   "clones": [
-    {
-      "timestamp": "2024-01-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-01-28T00:00:00Z",
       "count": 3,
